--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,11 @@ header {
 }
 .title {
   display: flex;
-  margin-top: 6rem;
+  margin-top: 5rem;
   justify-content: flex-end;
 }
 .title div {
-  width: 35%;
+  width: 30%;
 }
 .title div h1 {
   margin-bottom: 2rem;
@@ -68,6 +68,15 @@ header {
   line-height: 1.4rem;
   font-size: 14px;
   color: rgba(255, 255, 255, 0.678);
+}
+.main-quote {
+  font-size: 1.5rem;
+  font-family: "nunito-light";
+  margin-bottom: 1rem;
+  color: rgb(219, 219, 219);
+  border-bottom: 1px solid rgb(177, 89, 31);
+  display: inline-block;
+  padding-bottom: 2px;
 }
 .shop-now {
   margin-top: 1.5rem;
@@ -89,7 +98,7 @@ header {
   position: absolute;
   display: flex;
   align-items: center;
-  bottom: 20px;
+  bottom: 45px;
 }
 .location span {
   font-family: "Nunito-light";
@@ -124,22 +133,26 @@ header {
 }
 
 /*MAIN PAGE*/
-main {
-  height: 200vh;
+.products {
+  height: 220vh;
   position: relative;
   background-image: linear-gradient(rgba(0, 0, 0, 0.753), rgba(0, 0, 0, 0.753)),
-    url(./../img/bread-loafs-with-plate-wooden-table.jpg);
+    url(./../img/bread-loaf.jpg);
   background-size: cover;
   color: #fff;
+  border-bottom: 5px solid rgb(177, 89, 31);
+}
+.hover {
+  max-width: 100%;
 }
 .bakery {
-  width: 360px;
+  width: 100%;
 }
 .product {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   place-items: center;
-  gap: 4rem;
+  gap: 10%;
 }
 .customer {
   text-align: center;
@@ -156,7 +169,7 @@ main {
   position: relative;
 }
 .middle {
-  transition: 0.5s ease;
+  transition: 0.1s ease;
   opacity: 0;
   position: absolute;
   top: 50%;
@@ -164,7 +177,6 @@ main {
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
-  cursor: pointer;
   box-shadow: 21px 18px 35px -5px rgba(0, 0, 0, 0.75);
 }
 .hover:hover .bakery {
@@ -236,4 +248,206 @@ main {
   align-items: center;
   top: -30px;
   left: -20px;
+}
+.about-us {
+  height: 100vh;
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.653), rgba(0, 0, 0, 0.653)),
+    url(./../img/traditional-bread-dead-composition.jpg);
+  background-size: cover;
+  color: #fff;
+  border-bottom: 5px solid rgb(177, 89, 31);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-us-title {
+  margin-bottom: 2rem;
+  font-family: "Nunito";
+  font-size: 3rem;
+}
+.about-us-paragraph {
+  width: 400px;
+  font-family: "Nunito-light";
+  line-height: 1.4rem;
+  font-size: 16px;
+  color: #fff;
+}
+.delivery {
+  height: 100vh;
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.253), rgba(0, 0, 0, 0.253)),
+    url(./../img/close-up-bread-loaf-with-seeds.jpg);
+  background-size: cover;
+  color: #fff;
+  border-bottom: 5px solid rgb(177, 89, 31);
+}
+
+.delivery-title {
+  font-size: 2.5rem;
+  font-family: "Nunito";
+  padding-top: 2rem;
+}
+.delivery-paragraph {
+  /* width: 400px; */
+  font-family: "Nunito-light";
+  line-height: 1.4rem;
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.678);
+  margin-top: 1.5rem;
+}
+.accordion-title {
+  font-size: 2.5rem;
+  font-family: "Nunito";
+  font-weight: 500;
+  margin-top: 2rem;
+}
+.accordion {
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 50px;
+}
+.item {
+  box-shadow: 10px 10px 60px rgba(29, 29, 29, 0.75);
+  padding: 15px;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  column-gap: 24px;
+  row-gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+.number,
+.qa-text {
+  font-size: 20px;
+  font-weight: 600;
+  /* color: rgb(177, 89, 31); */
+  font-family: "Nunito";
+}
+.number {
+  color: #797e83;
+}
+
+.icon {
+  width: 24px;
+  height: 24px;
+  stroke: #fff;
+}
+.open {
+  border-top: 2px solid rgb(177, 89, 31);
+}
+.open .hidden-box {
+  display: block;
+}
+.hidden-box {
+  grid-column: 2;
+  display: none;
+}
+.hidden-box p {
+  line-height: 1.1rem;
+  font-family: "nunito-light";
+  margin-bottom: 10px;
+  font-size: 15px;
+  color: rgb(233, 233, 233);
+}
+.hidden-box ul {
+  font-family: "nunito-light";
+  margin-left: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.hidden-box ul li {
+  list-style: disc;
+  color: rgba(255, 255, 255, 0.678);
+  font-size: 14px;
+}
+.delivery-qa {
+  display: flex;
+  flex-direction: row-reverse;
+  gap: 100px;
+  padding-top: 50px;
+  justify-content: center;
+}
+.location-section {
+  height: 100vh;
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.253), rgba(0, 0, 0, 0.253)),
+    url(./../img/copy-space-background-with-wheat.jpg);
+  background-size: cover;
+  color: #fff;
+  border-bottom: 5px solid rgb(177, 89, 31);
+}
+
+/*carousel*/
+
+.about-flex {
+  display: grid;
+  grid-template-columns: auto auto;
+  place-items: center;
+}
+.carousel {
+  position: relative;
+}
+.carousel--item {
+  margin: auto;
+}
+.carousel--item img {
+  width: 360px;
+  display: none;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.75);
+}
+.carousel--item--selected img {
+  display: block;
+}
+.carousel--nav {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: center;
+  padding: 10px;
+}
+.carousel--button {
+  width: 15px;
+  height: 15px;
+  display: inline-block;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  margin: 0 5px;
+  cursor: pointer;
+}
+.carousel--button--selected {
+  background: rgb(177, 89, 31);
+}
+.location-title {
+  font-size: 2.5rem;
+  font-family: "Nunito";
+  /* padding-top: 3rem;
+  margin-bottom: 1.5rem; */
+  display: inline-block;
+}
+.quote {
+  font-size: 1rem;
+  font-family: "Nunito-light";
+  color: rgba(255, 255, 255, 0.678);
+  display: inline-block;
+}
+
+.map {
+  display: inline-block;
+  max-height: 40%;
+}
+.location-flex {
+  padding-top: 50px;
+  display: flex;
+  gap: 35px;
+  flex-direction: column;
+  justify-content: center;
+}
+iframe {
+  width: 450px;
+  height: 400px;
 }
